[fix]ヘッダーとフッターのナビゲーションリストの余白を修正

--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>HTMLCSS.code</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -15,23 +16,23 @@
             <img src="./assets/img/logo_header.png" alt="HTMLCSS" />
           </a>
         </h1>
-        <nav>
-          <ul class="page-header__nav">
-            <li class="page-header__nav-list">
+        <nav class="page-header__nav">
+          <ul class="page-header__nav-list">
+            <li class="page-header__nav-text">
               HOME
             </li>
-            <li class="page-header__nav-list">
-              <a href="./news.html" class="page-header__nav-list--link">
+            <li class="page-header__nav-text">
+              <a href="./news.html" class="page-header__nav-text--link">
                 NEWS
               </a>
             </li>
-            <li class="page-header__nav-list">
-              <a href="./recruit.html" class="page-header__nav-list--link">
+            <li class="page-header__nav-text">
+              <a href="./recruit.html" class="page-header__nav-text--link">
                 RECRUIT
               </a>
             </li>
-            <li class="page-header__nav-list">
-              <a href="./contact.html" class="page-header__nav-list--link">
+            <li class="page-header__nav-text">
+              <a href="./contact.html" class="page-header__nav-text--link">
                 CONTACT
               </a>
             </li>
@@ -43,7 +44,7 @@
       <section class="concept">
         <div class="concept__main-visual">
           <div class="concept__main-visual--wrapper">
-            <h2 class="concept__main-visual--header">We propose a life.</h2>
+            <h2 class="concept__main-visual--header">We <span class="br">propose</span> a life.</h2>
           </div>
         </div>
         <div class="concept__detail-wrapper">
@@ -140,23 +141,23 @@
             <img src="./assets/img/logo_footer.png" alt="HTMLCSS" />
           </a>
         </div>
-        <nav>
-          <ul class="page-footer__nav">
-            <li class="page-footer__nav-list">
+        <nav class="page-footer__nav">
+          <ul class="page-footer__nav-list">
+            <li class="page-footer__nav-text">
               HOME
             </li>
-            <li class="page-footer__nav-list">
-              <a href="./news.html" class="page-footer__nav-list--link">
+            <li class="page-footer__nav-text">
+              <a href="./news.html" class="page-footer__nav-text--link">
                 NEWS
               </a>
             </li>
-            <li class="page-footer__nav-list">
-              <a href="./recruit.html" class="page-footer__nav-list--link">
+            <li class="page-footer__nav-text">
+              <a href="./recruit.html" class="page-footer__nav-text--link">
                 RECRUIT
               </a>
             </li>
-            <li class="page-footer__nav-list">
-              <a href="./contact.html" class="page-footer__nav-list--link">
+            <li class="page-footer__nav-text">
+              <a href="./contact.html" class="page-footer__nav-text--link">
                 CONTACT
               </a>
             </li>
