[fix]ヘッダーレスポンシブ対応

--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -13,7 +13,10 @@
       <div class="page-header__wrapper">
         <h1 class="page-header__logo">
           <a href="./index.html">
-            <img src="./assets/img/logo_header.png" alt="HTMLCSS" />
+            <picture>
+              <source srcset="./assets/img/logo_footer.png" media="(max-width: 1280px)" >
+              <img src="./assets/img/logo_header.png" alt="HTMLCSS" class="page-header__logo--img"/>
+            </picture>
           </a>
         </h1>
         <nav class="page-header__nav">
@@ -44,7 +47,7 @@
       <section class="concept">
         <div class="concept__main-visual">
           <div class="concept__main-visual--wrapper">
-            <h2 class="concept__main-visual--header">We <span class="br">propose</span> a life.</h2>
+            <h2 class="concept__main-visual--header">We <span class="br">propose</span> <span class="br">a life.</span></h2>
           </div>
         </div>
         <div class="concept__detail-wrapper">
