[fix]フッターレスポンシブ対応

--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -141,7 +141,7 @@
       <div class="page-footer__wrapper">
         <div  class="page-footer__logo">
           <a href="./index.html">
-            <img src="./assets/img/logo_footer.png" alt="HTMLCSS" />
+            <img src="./assets/img/logo_footer.png" alt="HTMLCSS" class="page-footer__logo--img"/>
           </a>
         </div>
         <nav class="page-footer__nav">
