[fix]コンセプトイメージのレスポンシブ対応

--- a/kaguya/index.html
+++ b/kaguya/index.html
@@ -47,7 +47,7 @@
       <section class="concept">
         <div class="concept__main-visual">
           <div class="concept__main-visual--wrapper">
-            <h2 class="concept__main-visual--header">We <span class="br">propose</span> <span class="br">a life.</span></h2>
+            <h2 class="concept__main-visual--header"><span class="concept__main-visual--br">We</span><span class="concept__main-visual--br">propose</span><span class="concept__main-visual--br">a life.</span></h2>
           </div>
         </div>
         <div class="concept__detail-wrapper">
@@ -56,11 +56,11 @@
           <div class="concept__detail">
             <h3 class="concept__detail--header">暮らしを提案する。</h3>
             <p class="concept__detail--text">
-              私たちは、家具を売るのではなく、お客様の理想とする<br>
+              私たちは、家具を売るのではなく、<br class="concept__detail--sp-br">お客様の理想とする<br>
               「暮らし」を提案します。<br>
               仕事で疲れた後に帰りたくなる、<br>
               今日も１日頑張ろうと思える、<br>
-              そんな空間をお客様と一緒に作り上げていくのが私たちの仕事です。
+              そんな空間をお客様と一緒に作り上げていくのが<br class="concept__detail--sp-br">私たちの仕事です。
             </p>
           </div>
         </div>
