[fix]ヘッダーとフッターの修正を各画面に適応

--- a/kaguya/contact.html
+++ b/kaguya/contact.html
@@ -12,27 +12,30 @@
       <div class="page-header__wrapper">
         <h1 class="page-header__logo">
           <a href="./index.html">
-            <img src="./assets/img/logo_header.png" alt="HTMLCSS" />
+            <picture>
+              <source srcset="./assets/img/logo_footer.png" media="(max-width: 1280px)" >
+              <img src="./assets/img/logo_header.png" alt="HTMLCSS" class="page-header__logo--img"/>
+            </picture>
           </a>
         </h1>
-        <nav>
-          <ul class="page-header__nav">
-            <li class="page-header__nav-list">
-              <a href="./index.html" class="page-header__nav-list--link">
+        <nav class="page-header__nav">
+          <ul class="page-header__nav-list">
+            <li class="page-header__nav-text">
+              <a href="./index.html" class="page-header__nav-text--link">
                 HOME
               </a>
             </li>
-            <li class="page-header__nav-list">
-              <a href="./news.html" class="page-header__nav-list--link">
+            <li class="page-header__nav-text">
+              <a href="./news.html" class="page-header__nav-text--link">
                 NEWS
               </a>
             </li>
-            <li class="page-header__nav-list">
-              <a href="./recruit.html" class="page-header__nav-list--link">
+            <li class="page-header__nav-text">
+              <a href="./recruit.html" class="page-header__nav-text--link">
                 RECRUIT
               </a>
             </li>
-            <li class="page-header__nav-list">
+            <li class="page-header__nav-text">
               CONTACT
             </li>
           </ul>
@@ -88,24 +91,24 @@
             <img src="./assets/img/logo_footer.png" alt="HTMLCSS" />
           </a>
         </div>
-        <nav>
-          <ul class="page-footer__nav">
-            <li class="page-footer__nav-list">
-              <a href="./index.html" class="page-footer__nav-list--link">
+        <nav class="page-footer__nav">
+          <ul class="page-footer__nav-list">
+            <li class="page-footer__nav-text">
+              <a href="./index.html" class="page-footer__nav-text--link">
                 HOME
               </a>
             </li>
-            <li class="page-footer__nav-list">
-              <a href="./news.html" class="page-footer__nav-list--link">
+            <li class="page-footer__nav-text">
+              <a href="./news.html" class="page-footer__nav-text--link">
                 NEWS
               </a>
             </li>
-            <li class="page-footer__nav-list">
-              <a href="./recruit.html" class="page-footer__nav-list--link">
+            <li class="page-footer__nav-text">
+              <a href="./recruit.html" class="page-footer__nav-text--link">
                 RECRUIT
               </a>
             </li>
-            <li class="page-footer__nav-list">
+            <li class="page-footer__nav-text">
               CONTACT
             </li>
           </ul>
