[fix]誤字訂正(chach->catch)

--- a/kaguya/recruit.html
+++ b/kaguya/recruit.html
@@ -44,7 +44,7 @@
     </header>
     <main>
       <section class="top">
-        <div class="top__chach--recruit">
+        <div class="top__catch--recruit">
           <h2 class="top__header--recruit">RECRUIT</h2>
         </div>
       </section>
