--- a/kaguya/contact.html
+++ b/kaguya/contact.html
@@ -44,7 +44,7 @@
     </header>
     <main>
       <section class="top">
-        <div class="top__chach--contact">
+        <div class="top__catch--contact">
           <h2 class="top__header--contact">CONTACT</h2>
         </div>
       </section>
