--- a/kaguya/news.html
+++ b/kaguya/news.html
@@ -44,7 +44,7 @@
     </header>
     <main>
       <section class="top">
-        <div class="top__chach--news">
+        <div class="top__catch--news">
           <h2 class="top__header--news">NEWS</h2>
         </div>
       </section>
