--- a/kaguya/contact.html
+++ b/kaguya/contact.html
@@ -49,10 +49,7 @@
         </div>
       </section>
       <section class="section">
-        <h2 class="section__header">お問い合わせ</h2>
-        <p class="section__text">
-          オーダー家具や在庫状況のお問い合わせは下記フォームから承っております。
-        </p>
+        <h2 class="section__header">CONTACT</h2>
         <div class="contact">
           <form action="" method="POST" name="contact" class="contact__form">
             <div class="contact__form-field">
@@ -78,7 +75,7 @@
               ></textarea>
             </div>
             <button type="submit" class="contact__form-btn">
-              SEND
+              Send
             </button>
           </form>
         </div>
