[fix]Recruit画面のul要素をdl,dt,ddに書き換え

--- a/kaguya/recruit.html
+++ b/kaguya/recruit.html
@@ -56,12 +56,12 @@
               <tr class="recruit__table-row">
                 <td rowspan="3" class="recruit__table-header">販売員</td>
                 <td class="recruit__table-data">
-                  <p class="recruit__table-data--header">仕事内容</p>
-                  <ul class="recruit__table-list">
-                    <li class="recruit__table-data--text">海外から輸入している家具の販売</li>
-                    <li class="recruit__table-data--text">商品管理</li>
-                    <li class="recruit__table-data--text">オーダーメイド家具の発注</li>
-                  </ul>
+                  <dl>
+                    <dt class="recruit__table-data--header">仕事内容</dt>
+                    <dd class="recruit__table-data--list">海外から輸入している家具の販売</dd>
+                    <dd class="recruit__table-data--list">商品管理</dd>
+                    <dd class="recruit__table-data--list">オーダーメイド家具の発注</dd>
+                  </dl>
                 </td>
               </tr>
               <tr class="recruit__table-row">
@@ -80,14 +80,14 @@
               <tr class="recruit__row">
                 <td rowspan="3" class="recruit__table-header">家具職人</td>
                 <td class="recruit__table-data">
-                  <p class="recruit__table-data--header">仕事内容</p>
-                  <ul class="recruit__table-list">
-                    <li class="recruit__table-data--text">家具作成に必要な材料の発注</li>
-                    <li class="recruit__table-data--text">商品管理</li>
-                    <li class="recruit__table-data--text">オーダーメイド家具の相談</li>
-                    <li class="recruit__table-data--text">オーダーメイド家具のディレクション</li>
-                    <li class="recruit__table-data--text">オーダーメイド家具の製作</li>
-                  </ul>
+                  <dl>
+                    <dt class="recruit__table-data--header">仕事内容</dt>
+                    <dd class="recruit__table-data--list">家具作成に必要な材料の発注</dd>
+                    <dd class="recruit__table-data--list">商品管理</dd>
+                    <dd class="recruit__table-data--list">オーダーメイド家具の相談</dd>
+                    <dd class="recruit__table-data--list">オーダーメイド家具のディレクション</dd>
+                    <dd class="recruit__table-data--list">オーダーメイド家具の製作</dd>
+                  </dl>
                 </td>
               </tr>
               <tr>
